dark mode fixed home

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #333;
+  background-color: #0f0f0f;
   color: #333;
   padding: 20px;
   animation: fadeIn 0.5s ease;
@@ -163,7 +163,7 @@ h3 {
 .instructions-section h2 {
   font-size: 1.4rem;
   margin-bottom: 18px;
-  color: #f83cc9bd;
+  color: #79fdfe;
   font-weight: 600;
   letter-spacing: 2px;
 }
@@ -192,7 +192,7 @@ h3 {
 
 .instructions-section p {
   margin-top: 16px;
-  color: #bb008ca4;
+  color: #79fdfe;
   font-size: 0.97rem;
   font-weight: bold;
   letter-spacing: 1.2px;
